Implemented Elasticsearch for Product Service.
Products can be searched now using the Elasticsearch where we can search by title or description for the passed query.
+ Minor updates to the other files of other microservices.